--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
+      h1 {
+        padding: 15px;
+      }
       h1 > a {
         text-decoration: none;
       }
